<?xml version="1.0"?>
<package format="2">
  <name>robot_navigation</name>
  <version>1.0.0</version>
  <description>ROS Navigation Stack integration for visual SLAM robot</description>
  
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>move_base</depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>costmap_2d</depend>
  <depend>base_local_planner</depend>
  <depend>dwa_local_planner</depend>
  <depend>global_planner</depend>
  
  <export>
  </export>
</package>
